# aclj

./: CMakeLists.txt  Makefile  Readme.md  expr.cpp  expr2.cpp  helper.cpp  helper.h  init.sh  interpret.cpp  lex.cpp  lex.h  main.cpp  test.sh  todo.md  tree.cpp  tree.h
include/codegen/: gen.h
include/common/: globals.h
include/frontend/: decl.h  expr.h  lex.h  statements.h  symbol_tbl.h  tree.h  types.h
include/util/: helper.h
src/: main.cpp
src/codegen/: gen.cpp
src/common/: globals.cpp
src/eval/: interpret.cpp
src/frontend/: decl.cpp  expr.cpp  expr2.cpp  lex.cpp  statements.cpp  symbol_tbl.cpp  tree.cpp  types.cpp
src/util/: helper.cpp
test/: test.my
tests/: a.out  comparisons.my  do_while.my  for.my  func.my  main_func.my  multi_line_expr.my  multi_line_print.my  no_print.my  test2.my  test4.my  test6.my  test7.my  while.my  wrong_arith_expr.my  wrong_arith_expr_1.my
